@@ -1,2 +1,3 @@
 easy
+osc
 simple
